# ecir25-child-safe-search

./: .gitignore  README.md  setup.cfg
.github/workflows/: tests.yml
data/: topics.xml
data/de/qrels/: qrels-relevance.txt
data/de/runs/: bing.run.txt  google.run.txt  helles-koepfchen.run.txt  seitenstark.run.txt
data/en/: qrels-relevance.txt  topics.xml
data/en/runs/: child-search-1.run.txt  duckduckgo.run.txt
kid_friend/: __init__.py
src/dataset-translation/: translate-dataset.py
tests/: test_datasets.py  test_qrels.py
