[metadata]
name = kid_friend
version = attr: kid_friend.__version__
description = This code contains the ir_datasets integration for the kid_friend dataset.
license_file = LICENSE
url = tbd
project_urls =
    Bug Tracker = tbd
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: 3.14
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering

[options]
python_requires = >=3.10
include_package_data = True
packages = find:
install_requires =
    numpy
    tqdm

[options.extras_require]
test =
    pytest>=8.0,==8.*
    pytest-cov>=5.0,==5.*


[flake8]
max-line-length = 120
extend-ignore = E203
max-complexity = 10
